# Research-Improving-Device-Drivers

./: .gitignore  README.md
.obsidian/: app.json  graph.json  workspace  workspace.json
Admin/: .~lock.B00415210 Hons Project Specification Form 2022-23.docx#  B00415210 Hons Project Specification Form 2022-23.docx  Hons Project Specification Form 2022-23.docx  Necessary Equipment List.md
DevDriversStudy/: Core.md  Driver studying.md  Qotable Nuotes.md
HonoursProject/: 08cc8db920eb27808e6259efe28ee73ecomputing_honours_project_final_submission.pptx  8df1336a07aa181e81faaa5763241d61cover_sheet_and_declaration.docx  B00415210_DeviceDrivers_Dissertation_Honours.docx  B00415210_ProjectManagement_Honours.docx  Bibliography.md  CitationsReferences.md  Dissertation Layout.md  Donaldson group.md  Findings.md  Hons.md  Interim Report Marking Sheet (Kyle Christie - B00415210)(1).docx  Justifications.md  Key words glossary.md
Interim report/: B00415210_RustDriver_InterimReport.docx  B00415210_RustDriver_InterimReport1.docx  Plan.md  Report.md
Presentation/: Hons Project Presentation Marking Sheet (Kyle Christie).doc  Outline.md  Presentation notes.md
ProposalNotesImprovements/: findings.md  improvements.md
Research/: Core.md  Fast and precise symbolic analysis of concurrency bugs in device drivers.md  Haskell.md  Rust-for-Linux - Linux.md  Securing the Device Drivers of Your Embedded Systems - Framework & Prototype.md  Windows Driver Documentation.md  Writing Linux Kernel Modules in Safe Rust - Geoffrey Thomas & Alex Gaynor.md  (+2 more)
Rust/code/hello_cargo/: Cargo.toml
(+275 files in other folders)
